wasm/fasta_mutate_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_ayfncd1b/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/42ca90e2784df3faee1ab713e886e883300fbb42.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/42ca90e2784df3faee1ab713e886e883300fbb42.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/f334f5f204caf04e5ee86b0d265665b4de0c053d.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/f334f5f204caf04e5ee86b0d265665b4de0c053d.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/b0f5914e68f4c4c54a05ca82eb04bd424ea0506e.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/b0f5914e68f4c4c54a05ca82eb04bd424ea0506e.json" for subsequent builds)
cache:INFO:  - ok
